--- a/seip2022_practical_assignments/gradeshistogram/pom.xml
+++ b/seip2022_practical_assignments/gradeshistogram/pom.xml
@@ -36,16 +36,26 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <addClasspath>true</addClasspath>
-                            <mainClass>gr.aueb.dmst.nkakonas.HistogramGenerator</mainClass>
-                        </manifest>
-                    </archive>
-                </configuration>
+	            <artifactId>maven-assembly-plugin</artifactId>
+	            <configuration>
+		            <archive>
+			            <manifest>
+			                <mainClass>gr.aueb.dmst.nkakonas.HistogramGenerator</mainClass> 
+			            </manifest>
+		            </archive>
+		            <descriptorRefs>
+			            <descriptorRef>jar-with-dependencies</descriptorRef>
+		            </descriptorRefs>
+	            </configuration>
+	            <executions>
+		            <execution>
+			            <id>make-assembly</id>
+			                <phase>package</phase>
+			                <goals>
+				                <goal>single</goal>
+			                </goals>
+		            </execution>
+	            </executions>
             </plugin>
         </plugins>
     </build>
