--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,9 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-/.metadata/
 
-apache-maven-3.8.5-bin
+# Other folders
+.metadata
+.vscode
+.idea
+target
