--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_script:
   - ls -la
 
 script:
-  - mvn clean package
+  - mvn clean package jacoco:report
 
 after_success:
   - echo "Process terminated successfully!"
