change module name and artifactid to unittesting

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
   <modules>
             
     <module>gradeshistogram</module>
-    <module>junit</module>
+    <module>unittesting</module>
 
   </modules>
       
