import files for module

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
             
     <module>gradeshistogram</module>
     <module>unittesting</module>
+    <module>sourcecodeanalyzer</module>
 
   </modules>
       
