from sourcecodeanalyzer to SourceCodeAnalyzer

--- a/SourceCodeAnalyzer/pom.xml
+++ b/SourceCodeAnalyzer/pom.xml
@@ -2,7 +2,12 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>gr.aueb.gkortzis</groupId>
+	<parent>
+    	<artifactId>seip2022_practical_assignments</artifactId>
+    	<groupId>gr.aueb.dmst.nkakonas</groupId>
+    	<version>1.0-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
+  	</parent>
 	<artifactId>sourcecodeanalyzer</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Design Patterns assignment's code base</name>
